--- a/Tests/ogp.html
+++ b/Tests/ogp.html
@@ -1,11 +1,12 @@
 <html>
   <head>
-    <meta property="og:title" content="example.com title" />
-    <meta property="og:type" content="website" />
+    <meta charset='utf-8'>
+    <meta property="og:title" content=" < example.com title > "><meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.example.com" />
     
     <!-- og property that has an other attributes. -->
     <meta id="og-image" property="og:image" content="https://www.example.com/images/example.png" />
+    <meta property="og:image:type" content="image/png">
     <!-- og property that order of attributes are reversed. -->
     <meta content="example.com description" property="og:description" />
   </head>
