--- a/Tests/ogp.html
+++ b/Tests/ogp.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta property="og:title" content=" < example.com title > "><meta property="og:type" content="website" />
+    <meta property="og:title" content=" < It's example.com title > "><meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.example.com" />
     
     <!-- og property that has an other attributes. -->
