Accept some edge case

--- a/Tests/ogp.html
+++ b/Tests/ogp.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta property="og:title" content=" < It's example.com title > "><meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.example.com" />
+    <meta property=og:title content=" < It's example.com title > "><meta property="og:type" content="website" />
+    <meta property="og:url" content=\"https://www.example.com\" />
     
     <!-- og property that has an other attributes. -->
     <meta id="og-image" property="og:image" content="https://www.example.com/images/example.png" />
